--- a/views/events/editevents.ejs
+++ b/views/events/editevents.ejs
@@ -12,6 +12,8 @@
 </head>
 <body>
     <%- include('../partials/nav.ejs') %>
+    <%- include('../partials/chat.ejs') %>
+
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <form class="col" action="/admin/event/edit" method="POST">
