--- a/views/speakers/add.ejs
+++ b/views/speakers/add.ejs
@@ -27,6 +27,7 @@
         <div class="form-group">
           <label for="exampleInputPassword1">FullName</label>
           <input type="text" name="FullName" class="form-control" id="exampleInputPassword1">
+          <small id="emailHelp" class="form-text text-muted">at least 3 characters no numbers</small>
           <% if(error.toString().includes("FullName")){ %>
             <small class="text-danger">invalid FullName</small>
           <% } %>
@@ -34,6 +35,7 @@
         <div class="form-group">
           <label for="exampleInputPassword1">UserName</label>
           <input type="text" name="UserName" class="form-control" id="exampleInputPassword1">
+          <small id="emailHelp" class="form-text text-muted">at least 3 characters no numbers</small>
           <% if(error.toString().includes("UserName")){ %>
             <small class="text-danger">invalid UserName</small>
           <% } %>
@@ -41,6 +43,7 @@
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
           <input type="Password" name="Password" class="form-control" id="exampleInputPassword1">
+          <small id="emailHelp" class="form-text text-muted">at least 6 characters</small>
           <% if(error.toString().includes("Password")){ %>
             <small class="text-danger">invalid Password</small>
           <% } %>
@@ -62,12 +65,14 @@
         <div class="form-group">
           <label for="exampleInputPassword1">building</label>
           <input type="text" name="Address.building" class="form-control" id="exampleInputPassword1">
+          <small id="emailHelp" class="form-text text-muted">Numbers Only</small>
           <% if(error.toString().includes("Address.building")){ %>
             <small class="text-danger">invalid bulding</small>
           <% } %>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Photo</label>
+          <small id="emailHelp" class="form-text text-muted">will set to a default img if not choosen</small>
           <input type="file" name="avatar" />
         </div>
         <button onclick="addspeaker()" class="btn btn-primary">Add New Speaker</button>
