--- a/views/events/list.ejs
+++ b/views/events/list.ejs
@@ -14,11 +14,13 @@
 </head>
 <body>
   <%- include('../partials/nav.ejs') %>
+  <%- include('../partials/chat.ejs') %>
+
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <table class="table">
           <thead>
-              <tr>
+              <tr class="table-warning">
                   <th>_id</th>
                   <th>title</th>
                   <th>event_date</th>
@@ -28,7 +30,7 @@
                   <th>delete</th>
               </tr>
           </thead>
-          <tbody>
+          <tbody class="table-primary">
             <% events_details.forEach((event)=>{ %>
               <tr scope="row">
                 <td><%=event._id %></td>
@@ -52,7 +54,7 @@
                   <td></td>
                 <% } %>
                 <td><a name=<%=event._id %> class="btn btn-primary" href="/admin/event/editthis/<%=event._id %>" role="button">edit</a></td>
-                <td><a id="del" onclick="delEvent(<%=event._id%>,this)" name=<%=event._id %> class="btn btn-primary"  role="button">delete</a></td>
+                <td><a style="color: white;" id="del" onclick="delEvent(<%=event._id%>,this)" name=<%=event._id %> class="btn btn-danger"  role="button">delete</a></td>
               </tr>
             <% }) %>
           </tbody>
