--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -21,7 +21,7 @@
             <a class="dropdown-item" href="/admin/event/delete">delete events</a>
             <a class="dropdown-item" href="/admin/event/edit">edit events</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <!-- <a class="dropdown-item" href="#">Something else here</a> -->
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -41,7 +41,7 @@
         </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <a href="/logout" class="btn btn-outline-success my-2 my-sm-0" type="submit">LogOut</a>
+        <a href="/logout" class="btn btn-danger my-2 my-sm-0" type="submit">LogOut</a>
         <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </form>
