--- a/views/partials/nav2.ejs
+++ b/views/partials/nav2.ejs
@@ -14,7 +14,7 @@
         </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <a href="/logout" class="btn btn-outline-success my-2 my-sm-0" type="submit">LogOut</a>
+        <a href="/logout" class="btn btn-danger my-2 my-sm-0" type="submit">LogOut</a>
         <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </form>
